<resources>
    <string name="app_name">TelaLogin</string>
    <string name="login">Login</string>
    <string name="Entrar">Entrar</string>
    <string name="E_mail">E-mail</string>
    <string name="Bem_vindo">Bem Vindo</string>
    <string name="Senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="vers_o_0_00">Versão: 0.00</string>
    <string name="Nome">Nome</string>
    <string name="cadastro">Cadastro</string>
    <string name="email">Email</string>
    <string name="responsavel">responsável</string>
    <string name="Sexo">Sexo</string>
    <string name="telefone">Telefone</string>
    <string name="endereço">Endereço</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="cep">Cep</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="profissional">Profissional</string>
</resources>