<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainActivity2">

  <ImageView
      android:id="@+id/img_logo"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginTop="48dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:srcCompat="@drawable/ic_logo_dp"
      />

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/responsavel"
      android:textAppearance="@style/TextAppearance.Shrine.Title"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/img_logo" />
  <!-- campo do nome do usuario. -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/nome_text_input"
      style="@style/Widget.Shrine.TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/title"
      android:hint="@string/Nome"
      app:errorEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nome_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
  </com.google.android.material.textfield.TextInputLayout>

  <!-- campo do email do usuario. -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/email_text_input"
      style="@style/Widget.Shrine.TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/nome_text_input"
      android:hint="@string/email"
      app:errorEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />
  </com.google.android.material.textfield.TextInputLayout>

  <!-- campo da senha do usuario. -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/password_text_input"
      style="@style/Widget.Shrine.TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email_text_input"
      android:hint="@string/Senha"
      app:errorEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

  <!-- campo da sexo do usuario. -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/sexo_text_input"
      style="@style/Widget.Shrine.TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password_text_input"
      android:hint="@string/Sexo"
      app:errorEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/sexo_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
  </com.google.android.material.textfield.TextInputLayout>

  <!-- campo da telefone do usuario. -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/phone_text_input"
      style="@style/Widget.Shrine.TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/sexo_text_input"
      android:hint="@string/telefone"
      app:errorEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />
  </com.google.android.material.textfield.TextInputLayout>

  <!-- campo da endereço do usuario. -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/endereço_text_input"
      style="@style/Widget.Shrine.TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/phone_text_input"
      android:hint="@string/endereço"
      app:errorEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/endereço_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
  </com.google.android.material.textfield.TextInputLayout>

  <!-- campo da cidade do usuario. -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/cidade_text_input"
      style="@style/Widget.Shrine.TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/endereço_text_input"
      android:hint="@string/cidade"
      app:errorEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cidade_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
  </com.google.android.material.textfield.TextInputLayout>

  <!-- campo da estado do usuario. -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/estado_text_input"
      style="@style/Widget.Shrine.TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cidade_text_input"
      android:hint="@string/estado"
      app:errorEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/estado_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
  </com.google.android.material.textfield.TextInputLayout>

  <!-- campo da cep do usuario. -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/cep_text_input"
      style="@style/Widget.Shrine.TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/estado_text_input"
      android:hint="@string/cep"
      app:errorEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cep_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/register_button"
      android:layout_width="150dp"
      android:layout_height="55dp"
      android:layout_marginBottom="10dp"
      android:layout_marginTop="20dp"
      android:text="@string/cadastrar"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cep_text_input"/>





  </androidx.constraintlayout.widget.ConstraintLayout>